# rusty-machine-serde

./: CHANGELOG.md  Cargo.toml  README.md
benches/: lib.rs
benches/examples/: cross_validation.rs  k_means.rs  nnet.rs  svm.rs
examples/: k-means_generating_cluster.rs  naive_bayes_dogs.rs  nnet-and_gate.rs  svm-sign_learner.rs
src/: lib.rs  prelude.rs
src/analysis/: confusion_matrix.rs  cross_validation.rs  score.rs
src/data/transforms/: minmax.rs  mod.rs  normalize.rs  shuffle.rs  standardize.rs
src/datasets/: iris.rs  trees.rs
src/learning/: dbscan.rs  error.rs  glm.rs  gmm.rs  gp.rs  k_means.rs  lin_reg.rs  logistic_reg.rs  naive_bayes.rs  pca.rs  svm.rs
src/learning/knn/: binary_tree.rs  brute_force.rs  mod.rs
src/learning/nnet/: mod.rs  net_layer.rs
src/learning/optim/: fmincg.rs  grad_desc.rs
src/learning/toolkit/: cost_fn.rs  kernel.rs  rand_utils.rs  regularization.rs
tests/: datasets.rs  lib.rs
tests/learning/: dbscan.rs  gp.rs  k_means.rs  knn.rs  lin_reg.rs  pca.rs
tests/learning/optim/: grad_desc.rs
