[package]
name = "rusty-machine-serde"
version = "0.6.0"
authors = ["AtheMathmo", "brosoft-io"]

description = "A machine learning library."
repository = "https://github.com/AtheMathmo/rusty-machine"
documentation = "https://AtheMathmo.github.io/rusty-machine/"
keywords = ["machine","learning","stats","data","machine-learning"]
categories = ["science"]
readme = "README.md"
license = "MIT"

[features]
stats = []
datasets = []

[dependencies]
num = { version = "0.1.41", default-features = false }
rand = "0.4.1"
rulinalg-serde = { git = "https://github.com/brosoft-io/rulinalg-serde", version = "0.5.0"}
serde = { version = "1.0.111", features = ["derive"] }